src/main/java/com/example/hh/error/exception/ExistUserException.java
package com.example.hh.error.exception;

public class ExistUserException extends RuntimeException{

    public ExistUserException(String msg){
        super(msg);
    }
}
